--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ language: node_js
 node_js:
   - "12"
 
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
 branches:
   only:
     - master
