--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,6 @@ install:
 
 script:
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
